--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -11,14 +11,77 @@
     "The information on this page gives a summary of the Loads and Reliability reader, which is part of the safety content of the module CIEM5000 - Structural Engineering Track Base, written by Roel Schipper. In the end an implementation in Python on reliability plots based on his [GitHub repository](https://gitlab.tudelft.nl/roelschipper/ciem5000) will be given.\n",
     "```\n",
     "\n",
+    "## Introduction\n",
     "A structure should be sufficiently safe. This means that the probability of failure should be sufficiently low, but unfortunately enough it can never be 0 %. It is possible to determine the risk of failure of a structure (or more positively formulated: the structural reliability ) by carrying out a probabilistic calculation. There are 3 methods of calculations to deal with uncertainty, with increasing level of complexity (International Organization for Standardization 11 2015). Those are:\n",
     "- **Semi-probabilistic approach**: Safety format prescribing the design equations and the analysis procedures to be used default method in the Eurocodes, i.e. to be used for usual design situations.\n",
     "- **Reliability-based design and assessment**: Reliability requirements to fulfil unusual design situations in regard to uncertainties, code calibration.\n",
     "- **Risk-informed decision making**: Decisions are taken with due consideration of the total risks (e.g. loss of lives, injuries). Exceptional design situations in regard to uncertainties and consequences. Derivation of reliability requirements.\n",
     "\n",
-    " To prevent the design of every single structure resulting in a fully probabilistic undertaking, however, for most structures a simplified approach is allowed. Eurocode 0 (prNEN-EN-1990 2021) describes such a simplified, semi-probabilistic method, in which the stochastic distributions of material strength and load values are expressed by characteristic values, taking into account their spread, and by partial safety factors, that ensure sufficient safety margin between loads and capacity.\n",
+    "## Reliability index $\\beta$\n",
+    "The annual probability of failure $P_{f;a}$ and the annual reliability index $\\beta_{a}$ are used in the Eurocode as the two standard metrics to express structural reliability in the semi-probabilistic approach. The index $a$ (annum) is often left out, since variable loads are represented by the probability distributions of their *yearly* extreme values. The table below provides the values for both metrics:\n",
+    "\n",
+    "```{list-table} Relation between failure probability $P_{f}$ and reliability index $\\beta$ (prNEN-EN-1990 2021, table C.2).\n",
+    ":header-rows: 1\n",
+    ":name: Pf_vs_beta\n",
+    "\n",
+    "* - $P_f$\n",
+    "  - $\\beta$\n",
+    "* - $10^{-1}$\n",
+    "  - 1.28\n",
+    "* - $10^{-2}$\n",
+    "  - 2.33\n",
+    "* - $10^{-3}$\n",
+    "  - 3.09\n",
+    "* - $10^{-4}$\n",
+    "  - 3.72\n",
+    "* - $10^{-5}$\n",
+    "  - 4.26\n",
+    "* - $10^{-6}$\n",
+    "  - 4.75\n",
+    "* - $10^{-7}$\n",
+    "  - 5.2\n",
+    "* - $10^{-8}$\n",
+    "  - 5.61\n",
+    "```\n",
+    "\n",
+    "The reliability index $\\beta$ can be calculated from the probaility density functions (PDF) of loads (Effects) and resistance, shown in the figure below:\n",
+    "\n",
+    "```{figure} Images/E_R_curves_highgamma_uc0.81_Z.png\n",
+    "--- \n",
+    "scale: 60%\n",
+    "name: E_R_Z_curves\n",
+    "---\n",
+    "Effects vs. Resistance and reliability function Z\n",
+    "```\n",
+    "We see in red a PDF curve R which represents the probability that the Resistance (= strength) of a fictitious structure has a given value. We also see a blue PDF curve E (= Effects = loads) of the load on our structure. The green curve Z represents the difference of the E and R curves:\n",
+    "\n",
+    "$$\n",
+    "Z=R-E\n",
+    "$$\n",
+    "\n",
+    "with  \n",
+    "\n",
+    "$$\n",
+    "\\mu_Z=\\mu_R-\\mu_E\n",
+    "$$\n",
+    "\n",
+    "and  \n",
+    "\n",
+    "$$\n",
+    "\\sigma_Z=\\sqrt{\\sigma_R^2-\\sigma_E^2}\n",
+    "$$\n",
+    "\n",
+    "The reliability index $\\beta$ of the structure can now be calculated from the PDFs of E and R:\n",
+    "\n",
+    "$$\n",
+    "\\beta=\\frac{\\mu_Z}{\\sigma_Z}\n",
+    "$$\n",
+    "\n",
+    "Finally, the probability of failure can be derived from the table {numref}`Pf_vs_beta`.\n",
     "\n",
     "## Partial factors\n",
+    "To prevent the design of every single structure resulting in a fully probabilistic undertaking, however, for most structures a simplified approach is allowed. Eurocode 0 (prNEN-EN-1990 2021) describes such a simplified, semi-probabilistic method, in which the stochastic distributions of material strength and load values are expressed by characteristic values, taking into account their spread, and by partial safety factors, that ensure sufficient safety margin between loads and capacity.\n",
+    "\n",
     "The Eurocode defines partial factors for the Effects side (actions) in the prNEN-EN-1990 (2021), while the partial factors on the Resistance side (materials) are defined in the various material codes for steel, concrete, timber, and so forth. This Load/Resistance Factor (LRF) or split factor format approach is used to allocate the different uncertainty of loads (effects) and uncertainty of resistance (strength) where they belong, that is in separate calculations of design values of loads and resistance, respectively.\n",
     "\n",
     "```{figure} Images/partial_factors.png\n",
@@ -55,8 +118,6 @@
     "$$\n",
     "```\n",
     "\n",
-    "\n",
-    "\n",
     "## Effect vs Resistance\n",
     "The general objective of calculations overseeing safety is that the resistance of the structure should be greater than the effect of the load. A useful way to express this is the *unity check* {eq}`unity_check`. This check is obtained in 4 steps. The image below gives good visual insight in the steps.\n",
     "\n",
@@ -88,70 +149,11 @@
     ">\n",
     ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values $E_{char}$ and $R_{char}$ and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between $E_d$ and $R_d$ represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure is more than safe.\n",
     "\n",
-    "\n",
-    "## Reliability index $\\beta$\n",
-    "The annual probability of failure $P_{f;a}$ and the annual reliability index $\\beta_{a}$ are used in the Eurocode as the two standard metrics to express structural reliability in the semi-probabilistic approach. The index $a$ (annum) is often left out, since variable loads are represented by the probability distributions of their *yearly* extreme values. The table below provides the values for both metrics:\n",
-    "\n",
-    "```{list-table} Relation between failure probability $P_{f}$ and reliability index $\\beta$ (prNEN-EN-1990 2021, table C.2).\n",
-    ":header-rows: 1\n",
-    ":name: Pf_vs_beta\n",
-    "\n",
-    "* - $P_f$\n",
-    "  - $\\beta$\n",
-    "* - $10^{-1}$\n",
-    "  - 1.28\n",
-    "* - $10^{-2}$\n",
-    "  - 2.33\n",
-    "* - $10^{-3}$\n",
-    "  - 3.09\n",
-    "* - $10^{-4}$\n",
-    "  - 3.72\n",
-    "* - $10^{-5}$\n",
-    "  - 4.26\n",
-    "* - $10^{-6}$\n",
-    "  - 4.75\n",
-    "* - $10^{-7}$\n",
-    "  - 5.2\n",
-    "* - $10^{-8}$\n",
-    "  - 5.61\n",
-    "```\n",
-    "\n",
-    "To connect the meaning of the reliability index $\\beta$ to a simple structural example, let's look at the figure below:\n",
-    "\n",
-    "```{figure} Images/E_R_curves_highgamma_uc0.81_Z.png\n",
-    "--- \n",
-    "scale: 60%\n",
-    "name: E_R_Z_curves\n",
-    "---\n",
-    "Effects vs. Resistance and reliability function Z\n",
-    "```\n",
-    "We see in red a PDF curve R which represents the probability that the Resistance (= strength) of a fictitious structure has a given value. We also see a blue PDF curve E (= Effects = loads) of the load on our structure. The green curve Z represents the difference of the E and R curves:\n",
-    "\n",
-    "$$\n",
-    "Z=R-E\n",
-    "$$\n",
-    "\n",
-    "with  \n",
-    "\n",
-    "$$\n",
-    "\\mu_Z=\\mu_R-\\mu_E\n",
-    "$$\n",
-    "\n",
-    "and  \n",
-    "\n",
-    "$$\n",
-    "\\sigma_Z=\\sqrt{\\sigma_R^2-\\sigma_E^2}\n",
-    "$$\n",
-    "\n",
-    "The reliability index $\\beta$ of the structure can now be calculated from the PDFs of E and R:\n",
-    "\n",
-    "$$\n",
-    "\\beta=\\frac{\\mu_Z}{\\sigma_Z}\n",
-    "$$\n",
-    "\n",
-    "\n",
     "## Python implementation\n",
     "If you want to see some numerical examples using the concepts of safety, you can find these under {ref} `unity_check` and {ref}`reliability_index_example`.\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "[^1]: Schneider and Vrouwenvelder (2017, equation 4.44)"
    ]
