--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -77,7 +77,7 @@
     "\\beta=\\frac{\\mu_Z}{\\sigma_Z}\n",
     "$$\n",
     "\n",
-    "Finally, the probability of failure can be derived from the table {numref}`Pf_vs_beta`.\n",
+    "Finally, the probability of failure can be derived from {numref}`Pf_vs_beta` above. Numerical examples can be found in section {numref}`reliability_index_example`.\n",
     "\n",
     "## Partial factors\n",
     "To prevent the design of every single structure resulting in a fully probabilistic undertaking, however, for most structures a simplified approach is allowed. Eurocode 0 (prNEN-EN-1990 2021) describes such a simplified, semi-probabilistic method, in which the stochastic distributions of material strength and load values are expressed by characteristic values, taking into account their spread, and by partial safety factors, that ensure sufficient safety margin between loads and capacity.\n",
@@ -118,41 +118,68 @@
     "$$\n",
     "```\n",
     "\n",
-    "## Effect vs Resistance\n",
-    "The general objective of calculations overseeing safety is that the resistance of the structure should be greater than the effect of the load. A useful way to express this is the *unity check* {eq}`unity_check`. This check is obtained in 4 steps. The image below gives good visual insight in the steps.\n",
+    "## Unity check\n",
+    "The general objective of calculations overseeing safety is that the resistance of the structure should be greater than the effect of the load. A useful way to express this is the *unity check* (u.c.) according to equation {eq}`unity_check`: \n",
     "\n",
     "$$\n",
-    "\\frac{E_d}{R_d} \\leq 1\n",
+    "u.c.= \\frac{E_d}{R_d} \\leq 1\n",
     "$$(unity_check)\n",
     "\n",
-    "- First, both effect $E$ and resistance $R$ are expressed in their characteristic values. For $E$, this means the value $E_{char}$ is calculated with a probability of exceedance (overshoot) of 5%. For $R$, this is the value with a probability of 5% of under shoot, $R_{char}$. This is a standard statistic operation that is done by adding or subtracting $1.64·σ$ in case of a normal distribution. For loads or materials other distributions may apply, such as Weibull or lognormal distributions.\n",
-    "- Second, on the Effect side, $γ_E$ , the partial load factor, is multiplied with the characteristic value of the load or Effect, resulting in a dimensioning value of $E$ {eq}`E_d`, represented by the blue draw line, and for this example the value $E_d$ = 163 (again, unit does not matter here, as long as both $R$ and $E$ are expressed in the same unit).\n",
+    "This unity check is obtained in four steps. {numref}`uc_example` below gives good visual insight in the steps.\n",
+    "\n",
+    "1. Both effect $E$ and resistance $R$ are expressed in their *characteristic* values. For $E$, this means the value $E_{char}$ is calculated with a probability of exceedance (overshoot) of 5%. For $R$, this is the value with a probability of 5% of under shoot, $R_{char}$. This is a standard statistic operation that is done by adding or subtracting $1.64\\cdot\\sigma$ in case of a normal distribution: See the [MUDE online textbook](https://mude.citg.tudelft.nl/book/2025/univariate_distributions/PDF_CDF.html) for more explanation and a nice animation of the Gaussian distribution. For loads or materials other distributions may apply, such as Weibull or lognormal distributions.\n",
+    "\n",
+    "$$\n",
+    "E_{char} = \\mu_E + 1.64 \\cdot \\sigma_E  \n",
+    "$$\n",
+    "$$\n",
+    "R_{char} = \\mu_R - 1.64 \\cdot \\sigma_R\n",
+    "$$  \n",
+    "   \n",
+    "2. On the Effect side, $γ_E$ , the partial load factor, is multiplied with the characteristic value of the load or Effect, resulting in a dimensioning value of $E$ {eq}`E_d`, represented by the blue drawn line, and for this example the value $E_d$ = 163 (again, unit does not matter here, as long as both $R$ and $E$ are expressed in the same unit).\n",
     "\n",
     "$$\n",
     "E_d = E_{char} \\gamma_E\n",
     "$$(E_d)\n",
     "\n",
-    "- Third, on the Resistance side, the characteristic value of the strength or Resistance is divided by $γ_R$, the partial material factor, resulting in a dimensioning value of $R$ {eq}`R_d`, represented by the red draw line, and for this example the value $R_d = 201$ (same unit as $E$).\n",
+    "3. On the Resistance side, the characteristic value of the strength or Resistance is divided by $γ_R$, the partial material factor, resulting in a dimensioning value of $R$ {eq}`R_d`, represented by the red drawn line, and for this example the value $R_d = 201$ (same unit as $E$).\n",
     "\n",
     "$$\n",
     "R_d = \\frac{R_{char}}{\\gamma_R}\n",
     "$$(R_d)\n",
     "\n",
-    "- Fourth and finally, $E_d$ and $R_d$ are compared, in either of the two following ways: direct comparison $E_d ≤ R_d$ or unity check {eq}`unity_check`, the latter with the advantage that it gives some numerical information on the \"safety distance\" between $E_d$ and $R_d$.\n",
+    "4. Finally, $E_d$ and $R_d$ are compared, in either of the two following ways: direct comparison $E_d ≤ R_d$ or unity check equation {eq}`unity_check`, the latter with the advantage that it gives some numerical information on the \"safety distance\" between $E_d$ and $R_d$.\n",
+    "\n",
+    "Summarising, the inequation that describes the structural safety is:\n",
+    "\n",
+    "$$\n",
+    "E_{\\text{char}}\\cdot\\gamma_{E}\\leq\\frac{R_{\\text{char}}}{\\gamma_{R}}\n",
+    "$$\n",
+    "\n",
+    "which can be rewritten as:\n",
+    "\n",
+    "$$\n",
+    "E_{d}\\leq R_{d}\n",
+    "$$\n",
+    "\n",
+    "or expressed as the often used **unity check** in which the unity check proportion provides an indication of the safety distance between E and R:\n",
+    "\n",
+    "$$\n",
+    "u.c = \\frac{E_{d}}{R_{d}}\\leq1\n",
+    "$$\n",
     "\n",
     "\n",
     ">```{figure} Images/E_R_normaldistributions.png\n",
     ">---\n",
+    ">name: uc_example\n",
     ">---\n",
-    ">Example\n",
+    ">Example of how unity check is calculated\n",
     ">```\n",
     ">\n",
     ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values $E_{char}$ and $R_{char}$ and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between $E_d$ and $R_d$ represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure is more than safe.\n",
     "\n",
-    "## Python implementation\n",
-    "If you want to see some numerical examples using the concepts of safety, you can find these under {ref} `unity_check` and {ref}`reliability_index_example`.\n",
-    "\n",
-    "\n",
+    "## Python and examples\n",
+    "If you want to see some numerical examples using the concepts of safety and Python codes to produce the graphs, you can find these under {numref}`unity_check_example` and {numref}`reliability_index_example`.\n",
     "\n",
     "\n",
     "[^1]: Schneider and Vrouwenvelder (2017, equation 4.44)"
