--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -44,7 +44,7 @@
     "  - 5.61\n",
     "```\n",
     "\n",
-    "The reliability index $\\beta$ can be calculated from the probaility density functions (PDF) of loads (Effects) and resistance, shown in the figure below:\n",
+    "The reliability index $\\beta$ can be calculated from the probaility density functions ([PDF](https://mude.citg.tudelft.nl/book/2025/univariate_distributions/PDF_CDF.html)) of loads (Effects) and strength (Resistance), shown in the figure below:\n",
     "\n",
     "```{figure} Images/E_R_curves_highgamma_uc0.81_Z.png\n",
     "--- \n",
@@ -77,10 +77,10 @@
     "\\beta=\\frac{\\mu_Z}{\\sigma_Z}\n",
     "$$\n",
     "\n",
-    "Finally, the probability of failure can be derived from {numref}`Pf_vs_beta` above. Numerical examples can be found in section {numref}`reliability_index_example`.\n",
+    "Finally, the probability of failure can be derived from the calculated $\\beta$ using {numref}`Pf_vs_beta` above. Numerical examples and the effects of changes in $\\mu$ or $\\sigma$ of E and R can be found in section {numref}`reliability_index_example`.\n",
     "\n",
     "## Partial factors\n",
-    "To prevent the design of every single structure resulting in a fully probabilistic undertaking, however, for most structures a simplified approach is allowed. Eurocode 0 (prNEN-EN-1990 2021) describes such a simplified, semi-probabilistic method, in which the stochastic distributions of material strength and load values are expressed by characteristic values, taking into account their spread, and by partial safety factors, that ensure sufficient safety margin between loads and capacity.\n",
+    "To prevent that the design of every single structure results in a fully probabilistic undertaking, however, for most structures a simplified approach is allowed. Eurocode 0 (prNEN-EN-1990 2021) describes such a simplified, semi-probabilistic method, in which the stochastic distributions of material strength and load values are expressed by *characteristic* values, taking into account their spread, and by partial safety factors, that ensure appropriate safety margin between loads and capacity. This safety distance becomes larger for important structures where the consequences of failure are big, and vice versa.\n",
     "\n",
     "The Eurocode defines partial factors for the Effects side (actions) in the prNEN-EN-1990 (2021), while the partial factors on the Resistance side (materials) are defined in the various material codes for steel, concrete, timber, and so forth. This Load/Resistance Factor (LRF) or split factor format approach is used to allocate the different uncertainty of loads (effects) and uncertainty of resistance (strength) where they belong, that is in separate calculations of design values of loads and resistance, respectively.\n",
     "\n",
@@ -127,7 +127,7 @@
     "\n",
     "This unity check is obtained in four steps. {numref}`uc_example` below gives good visual insight in the steps.\n",
     "\n",
-    "1. Both effect $E$ and resistance $R$ are expressed in their *characteristic* values. For $E$, this means the value $E_{char}$ is calculated with a probability of exceedance (overshoot) of 5%. For $R$, this is the value with a probability of 5% of under shoot, $R_{char}$. This is a standard statistic operation that is done by adding or subtracting $1.64\\cdot\\sigma$ in case of a normal distribution: See the [MUDE online textbook](https://mude.citg.tudelft.nl/book/2025/univariate_distributions/PDF_CDF.html) for more explanation and a nice animation of the Gaussian distribution. For loads or materials other distributions may apply, such as Weibull or lognormal distributions.\n",
+    "1. Both effect $E$ and resistance $R$ are expressed in their *characteristic* values. $E_{char}$ means that the value $E$ is set a a load level of which the probability of exceedance (overshoot) is 5%. In a similar way $R_{char}$ is the value with a probability of 5% to *undershoot*. This is a standard statistic operation that is done by adding or subtracting $1.64\\cdot\\sigma$ in case of a normal distribution: \n",
     "\n",
     "$$\n",
     "E_{char} = \\mu_E + 1.64 \\cdot \\sigma_E  \n",
@@ -135,11 +135,13 @@
     "$$\n",
     "R_{char} = \\mu_R - 1.64 \\cdot \\sigma_R\n",
     "$$  \n",
+    "\n",
+    "See the [MUDE online textbook](https://mude.citg.tudelft.nl/book/2025/univariate_distributions/PDF_CDF.html) for more explanation and a nice animation of the Gaussian distribution. For loads or materials other distributions may apply, such as Weibull or lognormal distributions.\n",
     "   \n",
     "2. On the Effect side, $γ_E$ , the partial load factor, is multiplied with the characteristic value of the load or Effect, resulting in a dimensioning value of $E$ {eq}`E_d`, represented by the blue drawn line, and for this example the value $E_d$ = 163 (again, unit does not matter here, as long as both $R$ and $E$ are expressed in the same unit).\n",
     "\n",
     "$$\n",
-    "E_d = E_{char} \\gamma_E\n",
+    "E_d = E_{char} \\cdot \\gamma_E\n",
     "$$(E_d)\n",
     "\n",
     "3. On the Resistance side, the characteristic value of the strength or Resistance is divided by $γ_R$, the partial material factor, resulting in a dimensioning value of $R$ {eq}`R_d`, represented by the red drawn line, and for this example the value $R_d = 201$ (same unit as $E$).\n",
@@ -148,35 +150,18 @@
     "R_d = \\frac{R_{char}}{\\gamma_R}\n",
     "$$(R_d)\n",
     "\n",
-    "4. Finally, $E_d$ and $R_d$ are compared, in either of the two following ways: direct comparison $E_d ≤ R_d$ or unity check equation {eq}`unity_check`, the latter with the advantage that it gives some numerical information on the \"safety distance\" between $E_d$ and $R_d$.\n",
-    "\n",
-    "Summarising, the inequation that describes the structural safety is:\n",
-    "\n",
-    "$$\n",
-    "E_{\\text{char}}\\cdot\\gamma_{E}\\leq\\frac{R_{\\text{char}}}{\\gamma_{R}}\n",
-    "$$\n",
-    "\n",
-    "which can be rewritten as:\n",
-    "\n",
-    "$$\n",
-    "E_{d}\\leq R_{d}\n",
-    "$$\n",
-    "\n",
-    "or expressed as the often used **unity check** in which the unity check proportion provides an indication of the safety distance between E and R:\n",
-    "\n",
-    "$$\n",
-    "u.c = \\frac{E_{d}}{R_{d}}\\leq1\n",
-    "$$\n",
+    "4. Finally, $E_d$ and $R_d$ are compared, in either of the two following ways: direct comparison $E_d ≤ R_d$ or unity check equation {eq}`unity_check`, the latter with the advantage that it gives numerical information on the \"safety distance\" between $E_d$ and $R_d$.\n",
     "\n",
     "\n",
-    ">```{figure} Images/E_R_normaldistributions.png\n",
+    "\n",
+    ">```{figure} Images/partial_factors_COVR_0.17_beta_4.64_uc+0.70.png\n",
     ">---\n",
     ">name: uc_example\n",
     ">---\n",
     ">Example of how unity check is calculated\n",
     ">```\n",
     ">\n",
-    ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values $E_{char}$ and $R_{char}$ and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between $E_d$ and $R_d$ represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.81 · $R_d$. The structure is more than safe.\n",
+    ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values $E_{char}$ and $R_{char}$ and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between $E_d$ and $R_d$ represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.70 · $R_d$. The structure is more than safe.\n",
     "\n",
     "## Python and examples\n",
     "If you want to see some numerical examples using the concepts of safety and Python codes to produce the graphs, you can find these under {numref}`unity_check_example` and {numref}`reliability_index_example`.\n",
