--- a/book/design_workflow/general_loads/structural_safety.ipynb
+++ b/book/design_workflow/general_loads/structural_safety.ipynb
@@ -158,7 +158,7 @@
     ">---\n",
     ">name: uc_example\n",
     ">---\n",
-    ">Example of how unity check is calculated\n",
+    ">Graphical representation of symbols and quantities in the EC semi-probabilistic approach\n",
     ">```\n",
     ">\n",
     ">Example of a normal distribution of Effects ($E$) and Resistance ($R$) and the place of characteristic values $E_{char}$ and $R_{char}$ and design values $E_d$ and $R_d$. The characteristic values are obtained by finding from the normal distribution the values with a 5% probability of exceedance ($μ_E$ + 1.64 · $σ_E$ for $E$ and $μ_R$ − 1.64 · $σ_R$ for $R$). The design values are found by multiplying /dividing the characteristic values with the partial safety factors $γ_E$ and $γ_R$. The distance on the horizontal axis between $E_d$ and $R_d$ represents a measure of the unity-check (u.c.). In this example, $E_d$ = 0.70 · $R_d$. The structure is more than safe.\n",
