--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -24,7 +24,7 @@
     "---\n",
     "scale: 90%\n",
     "---\n",
-    "Schematic load-bearing floor plan, first floor office building.\n",
+    "Schematic load-bearing floor plan, first floor office building. In our example, a = 8 m and b = 6 m.\n",
     "```\n",
     "\n",
     "The beam on axis 3 as shown in the floor plan is interupted by the column on D3. This suggest that the structural scheme of axis 3 is the top one from the two possible schemes shown in the image below. The lower one would have been a continuous beam supported in the middle.\n",
@@ -40,7 +40,7 @@
     "---\n",
     "scale: 50%\n",
     "---\n",
-    "Structural scheme of the beam(s) on axis 3. We choose the top one.\n",
+    "Structural scheme of the beam(s) on axis 3. We choose the top one, with two single spans, and not a continuous beam on three supports.\n",
     "```\n",
     "\n",
     "````{margin}\n",
@@ -54,12 +54,14 @@
     "```\n",
     "````\n",
     "\n",
-    "In {ref}`concrete_rules_of_thumb` we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we choose for a single span, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:\n",
+    "\n",
+    "\n",
+    "In {ref}`concrete_rules_of_thumb` we can find rules of thumb for the estimation of height and width of a reinforced concrete beam. As we chose for two single spans, and the beam is traditionally reinforced and not prestressed the rule of thumbs gives:\n",
     "\n",
     "$h = \\frac{L}{8}$ to $\\frac{L}{12}$  \n",
     "$b = \\frac{h}{3}$ to $\\frac{h}{2}$ \n",
     "\n",
-    "For concrete beams, the weight per linear meter is not always provided. To determine it we need to multiply the cross-sectional area ($b$ × $h \\ [m²]$) by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration $9.81 \\ [m/s^2]$, often rounded to $10 \\ [m/s^2]$ for early design calculations. For reinforced concrete the density is around $2500 \\ [kg/m³]$, and for softwood approximately $300$ to $400 \\ [kg/m³]$ (depending on the timber species and strength class). The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$ (NB: $b$ and $h$ in meters!)\n",
+    "The weight per linear meter is now determined by multiplying the cross-sectional area $b$ × $h$ $[m^2]$ by the density $ρ \\ [kg/m³]$, and then multiply the result by the gravitational acceleration $9.81 \\ [m/s^2]$, often rounded to $10 \\ [m/s^2]$ for early design calculations. For reinforced concrete the density is around $2500 \\ [kg/m³]$. The weight per linear meter $q_g$ becomes: $q_g = b × h × ρ × \\frac{10}{1000} \\ [kN/m]$. (NB: $b$ and $h$ in meters!)\n",
     "\n",
     "For a rectangular cross-section, we can easily calculate the resistance moment (also known as section modulus) $W$ and the quadratic area moment $I$. We need these later to verify stresses and deflection:\n",
     "\\begin{gather*}\n",
@@ -67,10 +69,22 @@
     "W = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × b × h² \\ [mm³]\n",
     "\\end{gather*}\n",
     "\n",
+    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to the rules of thumb above, the height h would be equal to approximately:\n",
+    "$$\n",
+    "h = L/10 = \\frac{6000}{10} = 600 \\ [mm]\n",
+    "$$ \n",
     "\n",
-    "First, we need to estimate the dimensions. For the concrete structure, we use a cast in-situ (cast on site), non-prestressed concrete beam. Let's assume a strength class C20/25. According to an often-used rule of thumb, the height h would be equal to approximately h = L/10 = $\\frac{6000}{10} = 600 \\ [mm]$. For the corresponding width, we choose half the height (also a rule of thumb): b = h/2 = $\\frac{600}{2} = 300 \\ [mm]$. The weight per linear meter is then $0.30 \\ [m] × 0.60 \\ [m] × 2500 \\ [kg/m³] × 10 \\ [m/s²] / 1000 = 4.5 \\ [kN/m]$\n",
+    "For the width, we choose:\n",
+    "$$\n",
+    "b = h/2 = \\frac{600}{2} = 300 \\ [mm]\n",
+    "$$ \n",
     "\n",
-    "We can now calculate $I$ and $W$ using the above formulas.  \n",
+    "The weight per linear meter is then $0.30 \\ [m] × 0.60 \\ [m] × 2500 \\ [kg/m³] × 10 \\ [m/s²] / 1000 = 4.5 \\ [kN/m].$ \n",
+    "\n",
+    "```{tip}\n",
+    "You can skip this part if you want to directly determine loads and reinforcement, as in nearly all cases tensile strength is exceeded and reinforcement is required. Continue with 'Determining loads on the beam'. However, if you also want to check deflections, then continue here, as you will need $I_y$.\n",
+    "```\n",
+    "We can now calculate $I$ and $W$ using the above equations.  \n",
     "\n",
     "$$\n",
     "I_y = \\frac{1}{12} × 300 \\ [mm] × 600 \\ [mm³] = 5.40 × 10⁹ \\ [mm⁴]\n",
@@ -89,8 +103,8 @@
     "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C20/25 |         1.5 |       30 × 10³ |\n",
     "```\n",
     "\n",
-    "```{note}\n",
-    "It is good to notice that for the strength we did not use the _compressive_ but the _tensile_ strength of the concrete, as the latter is rather lower than the former. In a beam loaded on bending, the tension stresses in the part of the concrete generally that is under tension (that is: below the neutral line for a positive bending moment) are much higher than the tensile strength, so that reinforcement will need to take over, as we will see below. For this reason we will also provide a rule of thumb to approximate the amount of bending reinforcement necessary. You could even skip the check on bending stresses and directly move on to determining the reinforcement.\n",
+    "```{admonition}\n",
+    "It is good to notice that for the strength we did not use the _compressive_ but the characteristic _tensile_ strength of the concrete, as the latter is rather lower than the former. In a beam loaded on bending, the tension stresses in the part of the concrete generally that is under tension (that is: below the neutral line for a positive bending moment) are much higher than the tensile strength, so that reinforcement will need to take over, as we will see below. For this reason we will also provide a rule of thumb to approximate the amount of bending reinforcement necessary. To save time, you could even skip the check on bending stresses and directly move on to determining the reinforcement.\n",
     "```"
    ]
   },
@@ -98,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Determining load on the beam\n",
+    "## Determining loads on the beam\n",
     "````{margin}\n",
     "**Load determination**\n",
     "```{figure} ../safety/Images/design_process_5.jpg\n",
@@ -113,16 +127,17 @@
     "\n",
     "The load on the beam consists of three components:\n",
     "- $q_{self}$ = self-weight of the concrete (calculated above)\n",
-    "- $q_{opl}$ = other permanent loads, such as self-weight of the floor, ceiling, ducts and pipes, floor finishings, etc.\n",
-    "- $q_{ivl}$ = imposed variable load, such as people or furniture\n",
+    "- $q_{resting}$ = other permanent loads, such as self-weight of the floor, ceiling, ducts and pipes, floor finishings, etc.\n",
+    "- $q_{imposed}$ = imposed variable load, such as people or furniture\n",
     "\n",
     "```{figure} Images/Loads_Beam.jpg\n",
     "---\n",
     "scale: 40%\n",
     "---\n",
+    "Loads on the beam\n",
     "```\n",
     "\n",
-    "$q_{self}$ and $q_{opl}$ together form the permanent load $G_k$. The imposed variable load $q_{ivl}$ is the variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
+    "$q_{self}$ and $q_{resting}$ together form the characteristic permanent load $G_k$. The imposed variable load $q_{ivl}$ is the characteristic variable load $Q_k$ (using the abbreviations from the Eurocode). For beam verification, the loads must be calculated per linear meter on the beam, unless the load is applied as a point load on the beam. We assume a uniformly distributed load.\n",
     "\n",
     "```{note}\n",
     "To determine the amount of floor area resting on our beam, we use the schematic load-bearing floor plan. On it, we have shaded the area supported by the beam. All elements in the shaded area, including the weight of any secondary beams, must be included in the load. On this load-bearing floor plan we also show the actual dimensions.\n",
@@ -138,6 +153,7 @@
     "---\n",
     "scale: 25%\n",
     "---\n",
+    "Cross-section of floor system and beam\n",
     "```\n",
     "\n",
     "From top to bottom, we first see a finish layer of $50 [mm]$. The volumetric mass of the finish layer material is $2400 [kg/m³]$.\n",
@@ -162,6 +178,7 @@
     "---\n",
     "scale: 75%\n",
     "---\n",
+    "The shaded area of the floor is the area supported by the beam on axis 3\n",
     "```\n",
     "\n",
     "The found load per square meter [kN/m^2] needs to be converted to a distributed load on the beam, or rather a load per linear meter of beam [kN/m]. To determine its magnitude, we use the schematic load-bearing floor plan. On the beam, we mark a distance of 1 meter and shade the area supported by this meter of the beam. The size of this area is equal to two times the half center-to-center distance of the beams times 1 meter.\n",
@@ -174,6 +191,7 @@
     "---\n",
     "scale: 75%\n",
     "---\n",
+    "The dark green area represents the load per linear meter on the beam on axis 3\n",
     "```\n",
     "\n",
     "```{note}\n",
