--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -40,7 +40,7 @@
     "---\n",
     "scale: 50%\n",
     "---\n",
-    "Structural scheme of the beam(s) on axis 3. We choose the top one, with two single spans, and not a continuous beam on three supports.\n",
+    "Structural scheme of the beam(s) on axis 3. We choose the top one, with two single spans, and not a continuous beam on three supports. This has the advantage that the column can be continued over multiple floor levels.\n",
     "```\n",
     "\n",
     "````{margin}\n",
@@ -87,20 +87,20 @@
     "We can now calculate $I$ and $W$ using the above equations.  \n",
     "\n",
     "$$\n",
-    "I_y = \\frac{1}{12} × 300 \\ [mm] × 600 \\ [mm³] = 5.40 × 10⁹ \\ [mm⁴]\n",
+    "I_y = \\frac{1}{12} × 300 \\ [mm] × 600 \\ [mm³] = 540 \\ 000 × 10^5 \\ [10^4 \\ mm⁴]\n",
     "$$\n",
     "\n",
     "$$\n",
-    "W_y = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × 300 \\ [mm] × 600 \\ [mm²] = 18.0 × 10⁶ \\ [mm³]\n",
+    "W_y = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × 300 \\ [mm] × 600 \\ [mm²] = 18 \\ 000 \\ [10^3 \\ mm³]\n",
     "$$\n",
     "\n",
     "The values for strength (characteristic tensile strength) and modulus of elasticity can(for uncracked concrete) be obtained from the concrete tables in the Material Properties Concrete section. It is advisable to neatly organize the beam data, for example, in a table as shown below.\n",
     "\n",
     "```{table} Example organisation of beam data.\n",
     ":name: example-organisation-beam-data\n",
-    "| Height $h_{beam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [mm³]$ | Moment of Inertia $I_y \\ [mm⁴]$ | Strength class | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
+    "| Height $h_{beam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [10^3 mm³]$ | Moment of Inertia $I_y \\ [10^4 mm⁴]$ | Strength class | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
-    "| 600            | 600x300       | 4.5           | 18.0 × 10⁶|5.40 × 10⁹ |         C20/25 |         1.5 |       30 × 10³ |\n",
+    "| 600            | 600x300       | 4.5           | 18 \\ 000  |5 \\ 400 \\ 000 |         C20/25 |         1.5 |       30 \\ 000 |\n",
     "```\n",
     "\n",
     "```{admonition}\n",
