--- a/book/calculation_examples/concrete/beam.ipynb
+++ b/book/calculation_examples/concrete/beam.ipynb
@@ -87,20 +87,20 @@
     "We can now calculate $I$ and $W$ using the above equations.  \n",
     "\n",
     "$$\n",
-    "I_y = \\frac{1}{12} × 300 \\ [mm] × 600 \\ [mm³] = 540 \\ 000 × 10^5 \\ [10^4 \\ mm⁴]\n",
+    "I_y = \\frac{1}{12} × 300 \\ [mm] × 600^3 \\ [mm³] = 540 \\ 000 × 10^5 \\ [10^4 \\ mm⁴]\n",
     "$$\n",
     "\n",
     "$$\n",
-    "W_y = \\frac{I}{\\frac{1}{2} h} = \\frac{1}{6} × 300 \\ [mm] × 600 \\ [mm²] = 18 \\ 000 \\ [10^3 \\ mm³]\n",
+    "W_y = \\frac{I}{\\frac{1}{2} h} =  \\frac{1}{6} b \\ h^2= \\frac{1}{6} × 300 \\ [mm] × 600^2 \\ [mm²] = 18 \\ 000 \\ [10^3 \\ mm³]\n",
     "$$\n",
     "\n",
-    "The values for strength (characteristic tensile strength) and modulus of elasticity can(for uncracked concrete) be obtained from the concrete tables in the Material Properties Concrete section. It is advisable to neatly organize the beam data, for example, in a table as shown below.\n",
+    "Note that the units for $I$ and $W$ are $[10^4 \\ mm^4]$ and $[10^3 \\ mm^3]$, a notation often also found in profile tables which allows you to get some sense of the order of magnitude. It is strongly advised to use this same notation. They stem from the non-SI units $[cm^4]$ and $[cm^3]$. The values for strength (characteristic tensile strength) and modulus of elasticity can(for uncracked concrete) be obtained from the concrete tables in the Material Properties Concrete section. It is advisable to neatly organize the beam data, for example, in a table as shown below.\n",
     "\n",
     "```{table} Example organisation of beam data.\n",
     ":name: example-organisation-beam-data\n",
-    "| Height $h_{beam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Section modulus $W_y \\ [10^3 mm³]$ | Moment of Inertia $I_y \\ [10^4 mm⁴]$ | Strength class | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
+    "| Height $h_{beam} \\ [mm]$ | Area $A \\ [mm²]$ | Weight $q_G \\ [N/mm]$ | Moment of Inertia $I_y \\ [10⁴ \\ mm⁴]$ | Section modulus $W_y \\ [10³ \\ mm³]$ | Strength class | Char. tensile strength $f_{ctk} \\ [N/mm²]$ | Youngs modulus (uncracked) $E_{cm} \\ [N/mm²]$ |\n",
     "|----------------|---------------|---------------|-----------|-----------|----------------|------------------|----------------|\n",
-    "| 600            | 600x300       | 4.5           | 18 \\ 000  |5 \\ 400 \\ 000 |         C20/25 |         1.5 |       30 \\ 000 |\n",
+    "| 600            | 600x300       | 4.5           | 540 000  |18 000 |         C20/25 |         1.5 |       30 000 |\n",
     "```\n",
     "\n",
     "```{admonition}\n",
@@ -132,7 +132,7 @@
     "\n",
     "```{figure} Images/Loads_Beam.jpg\n",
     "---\n",
-    "scale: 40%\n",
+    "scale: 65%\n",
     "---\n",
     "Loads on the beam\n",
     "```\n",
